--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Catstagram</title>
+  <script src="index.js"></script>
+  <link rel="stylesheet" href="./stylesheets/main.css">
 </head>
 
 <body>
+  <!--
+
+  -->
 </body>
 
 </html>
